# RGR-OSI

./: README.md  install_script.txt  install_script1.txt  main.py  pyproject.toml  requirements.txt  task.md
K-MELEON_BROWSER/: K-MELEON_BROWSER.lnk
