[tool.poetry]
name = "installator"
version = "0.1.0"
description = ""
authors = ["Vladimir Itmshikov <89137420014a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
winshell = "^0.6"
dispatch = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
